# sentinel

./: .gitignore  CMakeLists.txt
conf/: sentinel_conf.json
include/sentinel/: client.h
include/sentinel/common/: configuration_manager.h  daemon.h  data_structures.h  debug.h  enumerations.h  error_codes.h  error_definition.h  typedefs.h
include/sentinel/job_manager/: Server.h  client.h  server.h
include/sentinel/monitor/: client.h
include/sentinel/worker_manager/: client.h
src/sentinel/common/: data_structures.cpp
src/sentinel/job_manager/: client.cpp  main.cpp  server.cpp  server.h
src/sentinel/lib/: client.cpp
src/sentinel/monitor/: client.cpp  server.cpp  server.h
src/sentinel/worker_manager/: client.cpp  main.cpp  queue.h  server.cpp  server.h  thread_pool.h
test/unit/: CMakeLists.txt
test/unit/class_loader/: rhea_job.cpp  test.cpp
test/unit/class_loader/job_1/: test.cpp
test/unit/class_loader/job_2/: test.cpp
test/unit/jobmanager/: com_spawn_test.cpp  executable.cpp  jobmanager_client_test.cpp  jobmanager_test.cpp  test.cpp
test/unit/worker_manager/: test.cpp  thread_pool.cpp
